domain page and UI alignment fix

--- a/styles/Pages.module.css
+++ b/styles/Pages.module.css
@@ -30,7 +30,6 @@
   box-shadow: 2px 2px 3px #b1b7bb;
   vertical-align: middle;
   font-weight: 600;
-  width: 85px !important;
   height: 35px !important;
   margin-bottom: 5px;
 }
