--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@ body {
 
 
 a {
-  color: inherit;
+  color: inherit !important;
   text-decoration: none !important;
 }
 
@@ -193,12 +193,13 @@ a {
   line-height: 25px !important;
 }
 
-.ant-menu{
+.ant-menu {
   font-size: 12px !important;
   font-weight: 600;
 }
 
-.ant-menu ul, .ant-menu ol {
+.ant-menu ul,
+.ant-menu ol {
   font-size: 12px !important;
   font-weight: 600;
 }
@@ -252,12 +253,15 @@ a {
 .ant-menu-inline.ant-menu-root .ant-menu-submenu-title>.ant-menu-title-content {
   color: var(--black) !important;
 }
-.ant-menu-vertical > .ant-menu-item, .ant-menu-vertical-left > 
-.ant-menu-item, .ant-menu-vertical-right > .ant-menu-item, .ant-menu-inline > 
-.ant-menu-item, .ant-menu-vertical > .ant-menu-submenu > .ant-menu-submenu-title, 
-.ant-menu-vertical-left > .ant-menu-submenu > .ant-menu-submenu-title, .ant-menu-vertical-right > 
-.ant-menu-submenu > .ant-menu-submenu-title, .ant-menu-inline > .ant-menu-submenu > .ant-menu-submenu-title
-{
+
+.ant-menu-vertical>.ant-menu-item,
+.ant-menu-vertical-left>.ant-menu-item,
+.ant-menu-vertical-right>.ant-menu-item,
+.ant-menu-inline>.ant-menu-item,
+.ant-menu-vertical>.ant-menu-submenu>.ant-menu-submenu-title,
+.ant-menu-vertical-left>.ant-menu-submenu>.ant-menu-submenu-title,
+.ant-menu-vertical-right>.ant-menu-submenu>.ant-menu-submenu-title,
+.ant-menu-inline>.ant-menu-submenu>.ant-menu-submenu-title {
   height: 25px !important;
   line-height: 25px !important;
 }
@@ -589,6 +593,18 @@ a {
   margin-bottom: 20px;
 }
 
-.ant-tag{
+.ant-tag {
   line-height: 15px !important;
+}
+
+.ant-table-tbody .ant-btn {
+  height: 25px !important;
+  padding: 4px 12px !important;
+  font-size: 12px !important;
+  line-height: 1.0715 !important;
+}
+
+.ant-table-thead>tr>th {
+  font-size: 14px !important;
+  font-weight: 700 !important;
 }
